[package]
name = "txt2epub"
version = "0.3.1"
edition = "2021"

[profile.release]
strip = true
lto = true
panic = "abort"

[dependencies]
anyhow = "1"
rand = "0.8"
indoc = "2"
lazy-regex = "3"
quick-xml = "0.35"
epub-builder = { version = "0.7", default-features = false, features = ["zip-command"] }
imageinfo = "0.7"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking"] }
clap = { version = "4", features = ["derive"] }
